<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/update_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/update_temp"
        android:textAppearance="@style/update_temp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <EditText

        android:id="@+id/inputMinute"
        android:layout_width="68dp"
        android:layout_height="33dp"
        android:background="#D9D9D9"
        android:elevation="8dp"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_temp"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="8"
        android:text="@string/minute"
        android:textAppearance="@style/minute"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toEndOf="@+id/inputMinute"
        app:layout_constraintTop_toBottomOf="@+id/update_temp"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/temperature"
        android:textAppearance="@style/temperature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <TextView
        android:id="@+id/celsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="8"
        android:text="@string/celsius"
        android:textAppearance="@style/celsius"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toEndOf="@+id/outputTemperature"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/outputTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:letterSpacing="0.14"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="8"
        android:text="--"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        app:layout_constraintVertical_bias="0.056" />


    <TextView
        android:id="@+id/lastUpdateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:letterSpacing="0.14"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="8"
        android:text="--:--"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_update"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/last_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="8"
        android:text="@string/last_update"
        android:textAppearance="@style/last_update"
        android:textColor="#4143E2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />


    <Button
        android:id="@+id/signalButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:backgroundTint="#D9D9D9"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="20"
        android:text="Start"
        android:textAlignment="center"
        android:textColor="#0D8A12"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

</androidx.constraintlayout.widget.ConstraintLayout>